public class Customer {
  public OrderSlip createOrder() {
    return new BurgerOrderSlip();
  }
}
