public interface OrderSlip {
  public void orderUp(ShortOrderCook cook);
}
