public class ShortOrderCook {
  public void makeBurger() {
    System.out.println("Making a Burger");
  }
}
